# grib-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  codeql.yml  reference-compat.yml
docker/: eccodes.Dockerfile
docs/: benchmark-report.md
grib-core/: Cargo.toml
grib-core/src/: binary.rs  bit.rs  data.rs  error.rs  grib1.rs  grid.rs  lib.rs  metadata.rs  parameter.rs  product.rs  util.rs
grib-reader/: Cargo.toml
grib-reader/benches/: compare_eccodes.rs
grib-reader/examples/: sync_corpus.rs
grib-reader/fuzz/: Cargo.toml  README.md
grib-reader/fuzz/corpus/fuzz_grib_open/: multifield.grib2
grib-reader/fuzz/corpus/fuzz_grib_sections/: bitmap.grib1  forecast.grib2  minimal.grib1  noaa-hrrr-conus-lambert-refc.grib2
grib-reader/fuzz/corpus/fuzz_grib_tolerant/: complex-missing.grib2  complex.grib2  eccc-gem-global-latlon-albedo-jpeg2000.grib2  minimal.grib2  noaa-hrrr-alaska-polar-refc.grib2  truncated.grib2
grib-reader/fuzz/fuzz_targets/: common.rs  fuzz_grib_open.rs  fuzz_grib_sections.rs  fuzz_grib_tolerant.rs  fuzz_grib_writer_inputs.rs
grib-reader/src/: data.rs  error.rs  grib1.rs  grid.rs  indicator.rs  lib.rs  metadata.rs  parameter.rs  product.rs  sections.rs
grib-reader/tests/: corpus.rs  corruption.rs  integration.rs  parity_eccodes.rs
grib-reader/tests/common/: fixtures.rs  mod.rs  reference.rs
grib-reader/tests/corpus/: README.md
grib-reader/tests/corpus/bootstrap/: minimal.grib1  minimal.grib2  multifield.grib2  spatial-differencing.grib2
grib-writer/: Cargo.toml
grib-writer/benches/: encode.rs
grib-writer/src/: lib.rs
grib-writer/tests/: parity_eccodes.rs
grib-writer/tests/common/: mod.rs
scripts/: run-eccodes-benchmarks.sh  run-eccodes-parity.sh  run-reference-benchmarks.sh  run-reference-parity.sh
tools/: eccodes-reference.c
