[package]
name = "grib-reader"
description = "GRIB Edition 1 and 2 decoder for weather and climate data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/grib-reader"
keywords = ["grib", "grib2", "weather", "climate", "decoder"]
categories = ["science", "parser-implementations"]
exclude = ["tests/corpus/interop/samples/.gitkeep"]

[dependencies]
grib-core = { path = "../grib-core", version = "0.6.0" }
ndarray = { workspace = true }
memmap2 = { workspace = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
jpeg2k = { version = "0.10.1", default-features = false, features = ["openjp2"], optional = true }
png = { version = "0.18.1", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["rayon"]
jpeg2000 = ["dep:jpeg2k"]
png = ["dep:png"]
codecs = ["jpeg2000", "png"]
rayon = ["dep:rayon"]

[dependencies.rayon]
version = "1"
optional = true

[[bench]]
name = "compare_eccodes"
harness = false
