[package]
name = "grib-writer"
description = "Pure-Rust GRIB encoder for weather and climate data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/grib-writer"
keywords = ["grib", "grib2", "weather", "climate", "encoder"]
categories = ["science", "encoding"]

[dependencies]
grib-core = { path = "../grib-core", version = "0.6.0" }
openjp2 = { version = "0.6.1", default-features = false, features = ["file-io", "std"], optional = true }
png = { version = "0.18.1", optional = true }
tempfile = { version = "3", optional = true }

[features]
default = []
jpeg2000 = ["dep:openjp2", "dep:tempfile"]
png = ["dep:png"]
codecs = ["jpeg2000", "png"]

[dev-dependencies]
criterion = "0.5"
grib-reader = { path = "../grib-reader", version = "0.6.0", features = ["codecs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "encode"
harness = false
