[package]
name = "grib-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
grib-reader = { path = ".." }

[[bin]]
name = "fuzz_grib_open"
path = "fuzz_targets/fuzz_grib_open.rs"
test = false
doc = false
bench = false
