[package]
name = "grib-reader-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
grib-core = { path = "../../grib-core" }
grib-reader = { path = ".." }
grib-writer = { path = "../../grib-writer" }

[[bin]]
name = "fuzz_grib_open"
path = "fuzz_targets/fuzz_grib_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grib_tolerant"
path = "fuzz_targets/fuzz_grib_tolerant.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grib_sections"
path = "fuzz_targets/fuzz_grib_sections.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grib_writer_inputs"
path = "fuzz_targets/fuzz_grib_writer_inputs.rs"
test = false
doc = false
bench = false
